Fix for jumping input bar in Safari

--- a/css/glowingbear.css
+++ b/css/glowingbear.css
@@ -384,7 +384,7 @@ td.time {
 }
 
 .footer {
-    position: fixed;
+    position: sticky;
     bottom: 0;
     height: 35px;
     width: 100%;
